<resources>
    <string name="app_name">Credi Móvil</string>
    <string name="action_settings">Configuraciones</string>
    <string name="item_inicio">Calif. SF.</string>
    <string name="item_Solicitud">Calendario</string>
    <string name="item_digitacion">Digitación</string>
    <string name="item_ListSolCred">Solicitud</string>
    <string name="item_ListGesCob">Cobranza</string>
    <string name="item_FteIngresoDep">Fte. Ingreso</string>
    <string name="item_NuevoExpedienteCredito">Nuevo Expediente de Crédito</string>
    <string name="item_RegistroPersona">Registro Persona</string>
    <string name="item_AgenciaComercial">Agenda Comercial</string>
    <string name="item_Recuperaciones">Recuperaciones</string>
    <string name="item_Configuracion">Configuración</string>
    <string name="item_Ajustes">Ajustes</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="item_georef">Geo Referenciación</string>
    <string name="subitem_georef">Geo Referenciar</string>
    <string name="subitem_updown">Sincronizar</string>
    <string name="text_resetpass">Resetear contraseña</string>
    <string name="text_unlockacc">Desbloquear cuenta</string>
    <string name="enter_name">Nombre</string>
    <string name="enter_reference">Referencia</string>
    <string name="enter_doi">Documento de identidad</string>
    <string name="validate_save">    BUSCAR CLIENTE    </string>
    <string name="enter_phone">Teléfono</string>
    <string name="type">Tipo</string>
    <string name="latitude">Latitud:</string>
    <string name="longitude">Longitud:</string>
    <string name="save_location">GUARDAR UBICACIÓN</string>
    <string name="delete_location">ELIMINAR UBICACIÓN</string>
    <string name="register_location">Registrar Ubicación</string>
    <string name="download_clients">Obtener clientes</string>
    <string name="load_clients">Guardar clientes</string>
    <string name="load">Guardar</string>
    <string name="dowload">Obtener</string>
    <string name="radio">Radio</string>
    <string name="enter_radio">Utiliza esta opción para obtener los clientes que se ubiquen dentro del radio de su posición actual.</string>
    <string name="enter_radio2">El radio ingresado debe estar expresado en metros.</string>
    <string name="load_clients_hint">Utiliza esta opción para enviar los clientes que hayas registrado, a la base de datos de la CMAC ICA.</string>
    <string name="tap_FteDatosCliente">Datos Cliente</string>
    <string name="tap_FteComentario">Comentarios</string>
    <string name="tap_FteIgrEgr">Ingr y Egre</string>
    <string name="tap_FteIgrBalance">Balance</string>
    <string name="etiqueta_info_usuario">DATOS INTERNOS DEL CLIENTE</string>
    <string name="etiqueta_DetCalif_usuario">CALIFICACIÓN 6 ÚLTIMOS MESES</string>
    <string name="prompt_password">Contraseña </string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_user_id">Usuario</string>
    <string name="accion_sync">Sincronizar</string>
    <string name="accion_eliminar">Eliminar</string>
    <string name="accion_guardar">Guardar</string>
    <string name="action_save">guardar</string>
    <string name="action_update">actualizar</string>
    <string name="action_delete">eliminar</string>
    <string name="action_take_photo">tomar foto</string>
    <string name="action_accept">aceptar</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="tipo_cuenta">pe.com.cmacica.flujocredito.cuenta</string>
    <string name="autoridad_provider">pe.com.cmacica.flujocredito</string>
    <string name="search_hint">Nombre...</string>
    <string name="title_activity_actividad_hist_plan_pago">Historial de Pago</string>
    <string name="title_activity_actividad_mant_sol_cred">ActividadMantSolCred</string>
    <string name="RegistroSolicitud">Nueva Solicitud</string>
    <string name="RegistroGestion">Registrar Gestión</string>
    <string name="title_activity_actividad_gestion_cobranza">ActividadGestionCobranza</string>
    <string name="title_activity_actividad_gestion_cobranza1">ActividadGestionCobranza1</string>
    <string name="Programación">Programación</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_actividad__visor__sbs">Actividad_Visor_Sbs</string>
    <string name="title_activity_mostrar_latitud_longitud">MostrarLatitudLongitud</string>
    <string name="title_activity_actividad_programacion_recuperaciones">
        ActividadProgramacionRecuperaciones
    </string>
    <string name="grupo_accion_cartera">Geo Referenciación</string>
    <string name="grupo_accion_agenda">Agenda</string>
    <string name="accion_accion_cartera_analista">Geo Referenciar</string>
    <string name="accion_accion_agenda_comercial">Agenda Comercial</string>
    <string name="accion_accion_referido">Referido</string>
    <string name="cartera_analista_title">Cartera de Analista</string>
    <string name="cartera_analista_date">Fecha: %s</string>
    <string name="cartera_analista_action_get_customers">Obtener Clientes</string>
    <string name="cartera_analista_msg_get_customers">Utiliza esta opción para obtener los clientes que se ubiquen dentro del radio de su posición actual.</string>
    <string name="cartera_analista_search_name_dni_hint">Buscar por Nombre o D.N.I.</string>
    <string name="cartera_analista_action_sync_up">Sincronizar</string>
    <string name="cartera_analista_action_location">Localización</string>
    <string name="cartera_analista_action_add">Agregar</string>
    <string name="cartera_analista_action_filter">Filtro</string>
    <string name="cartera_analista_error_not_customers">¡No se encontraron clientes cercanos! Intenta un radio mayor.</string>
    <string name="cartera_analista_msg_success_customers">¡Se realizó la descarga de los clientes!</string>
    <string name="cartera_analista_error_save_customers">¡Error! No se guardo correctamente los clientes.</string>
    <string name="cartera_analista_msg_esperar">Espere por favor</string>
    <string name="cartera_analista_msg_get_customer">Obteniendo Clientes del servidor.</string>
    <string name="cartera_analista_msg_debe_obtener_clientes">Debe Obtener primero a los clientes.</string>
    <string name="cartera_analista_msg_no_existe_cliente">¡No existe clientes para sincronizar!</string>
    <string name="cartera_analista_msg_sincronizando_clientes">Sincronizando Clientes</string>
    <string name="cartera_analista_error_get_date_download_customer">No se pudo obtener la fecha de descarga de los clientes.</string>
    <string name="cartera_analista_error_sincronizar_clientes">Error al Sincronizar a los clientes</string>
    <string name="item_cliente_document">Documento: %s</string>
    <string name="item_cliente_phone">Teléfono: %s</string>
    <string name="item_cliente_geoposicionado">GeoPosicionado: %s</string>
    <string name="filtro_busqueda_title">Filtro de Búsqueda</string>
    <string name="filtro_busqueda_radio">Radio</string>
    <string name="filtro_busqueda_datos_locales">Datos Locales</string>
    <string name="filtro_busqueda_action_actual_analista">actual \nanalista</string>
    <string name="filtro_busqueda_action_otras_carteras">Otras \nCarteras</string>
    <string name="filtro_busqueda_action_todos">Todos</string>
    <string name="filtro_busqueda_error_lat_long">No se ha podido obtener la Coordenadas Actual</string>
    <string name="filtro_busqueda_msg_esperar">Espere por favor</string>
    <string name="filtro_busqueda_msg_get_customer">Obteniendo Clientes del servidor.</string>
    <string name="filtro_busqueda_msg_filtro_aplicado">Filtro Aplicado exitosamente</string>
    <string name="filtro_busqueda_error_eliminacion_clientes">Error en la eliminación de los clientes</string>
    <string name="filtro_busqueda_msg_existe_clientes_editado_insertado">No se puede aplicar el filtro, existe clientes insertados o actualizados.</string>
    <string name="filtro_busqueda_subtitle_geoposicion">GeoPosición</string>
    <string name="filtro_busqueda_action_geoposicionado">GeoPosicionado</string>
    <string name="filtro_busqueda_action_no_geoposicionado">No \nGeoPosicionado</string>
    <string name="filtro_busqueda_action_limpiar_filtros">Limpiar</string>
    <string name="filtro_busqueda_action_aplicar_filtros">Aplicar</string>
    <string name="detalle_usuario_title">Detalle Usuario</string>
    <string name="detalle_usuario_datos_personales">Datos Personales</string>
    <string name="detalle_usuario_nombre">Nombre</string>
    <string name="detalle_usuario_documento_identidad">Documento de Identidad</string>
    <string name="detalle_usuario_telefono">Teléfono</string>
    <string name="detalle_usuario_creditos">Créditos</string>
    <string name="detalle_usuario_numero">Número</string>
    <string name="detalle_usuario_estado">Estado</string>
    <string name="detalle_usuario_mora">Mora</string>
    <string name="detalle_usuario_monto">Monto</string>
    <string name="detalle_usuario_georeferenciado">Georeferenciado</string>
    <string name="detalle_usuario_action_georeferencias">Georeferenciar</string>
    <string name="detalle_usuario_action_editar">Editar</string>
    <string name="detalle_usuario_error_title">Créditos no Encontrados</string>
    <string name="detalle_usuario_error_cargar_creditos">Error al cargar los créditos</string>
    <string name="detalle_usuario_msg_creditos_no_encontrados">El usuario no registra créditos.</string>
    <string name="georeferenciar_title">Georreferenciación</string>
    <string name="georeferenciar_direccion_domicilio">Dirección Domicilio</string>
    <string name="georeferenciar_referencia">Referencia</string>
    <string name="georeferenciar_latitud">Latitud</string>
    <string name="georeferenciar_longitud">Longitud</string>
    <string name="georeferenciar_action_visualizar">Visualizar</string>
    <string name="georeferenciar_action_editar">Editar</string>
    <string name="georeferenciar_error_title">Direcciones no Encontradas</string>
    <string name="georeferenciar_error_content">Agrege una dirección a este usuario.</string>
    <string name="georeferenciar_dialog_title">Alerta</string>
    <string name="georeferenciar_dialog_content">Solo se puede visualizar las direcciones, ya que el cliente es de otra cartera.</string>
    <string name="georeferenciar_dialog_action_aceptar">Aceptar</string>
    <string name="anade_direccion_title">Añade Dirección</string>
    <string name="anade_direccion_latitud">Latitud %s</string>
    <string name="anade_direccion_longitud">Longitud %s</string>
    <string name="anade_direccion_detalles_direccion">Detalles de Dirección</string>
    <string name="anade_direccion_detalles_direccion_hint">Especifica una referencia</string>
    <string name="anade_direccion_action_guardar_direccion">Guardar Dirección</string>
    <string name="anade_direccion_tipo_direccion">Tipo de Dirección</string>
    <string name="registro_referido_dni_hint">D.N.I.</string>
    <string name="registro_referido_nombres_hint">Nombres</string>
    <string name="registro_referido_direccion_hint">Dirección</string>
    <string name="registro_referido_telefono_hint">Teléfono</string>
    <string name="registro_referido_departamento_hint">Departamento</string>
    <string name="registro_referido_provincia_hint">Provincia</string>
    <string name="registro_referido_distrito_hint">Distrito</string>
    <string name="registro_referido_agencia_hint">Agencia</string>
    <string name="registro_referido_producto_hint">Producto</string>
    <string name="registro_referido_registrar_resultado_hint">Registrar Resultado</string>
    <string name="registro_referido_action_registrar_cliente_referido">Registrar Cliente Referido</string>
    <string name="registro_referido_action_buscar">Buscar</string>
</resources>