<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityRegisterGeoRef"
    android:fitsSystemWindows="true"
    tools:context="pe.com.cmacica.flujocredito.ViewModel.GeoReferenciacion.RegisterGeoRefActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:weightSum="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1.05"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView android:src="@drawable/map_icon"
                android:layout_width="70dp"
                android:layout_height="55dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal" />

            <!--  Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/tv_register_doi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="9"
                    android:textColor="@color/TextPrimary"
                    android:hint="@string/enter_doi" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnValidateClient"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="47dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:text="@string/validate_save"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp">
                <EditText android:id="@+id/tv_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/TextPrimary"
                    android:maxLength="50"
                    android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                    android:hint="@string/enter_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/tv_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="9"
                    android:textColor="@color/TextPrimary"
                    android:hint="@string/enter_phone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/tv_register_reference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLength="50"
                    android:digits="abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ1234567890- "
                    android:textColor="@color/TextPrimary"
                    android:hint="@string/enter_reference"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/type"
                android:layout_marginStart="5dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"
                android:textColor="@color/TextPrimary"
                android:id="@+id/spnTipoDireccion">
            </Spinner>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/TextPrimary"
                android:text="@string/item_georef"
                android:gravity="center"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_register_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:layout_gravity="start"
                    android:textColor="@color/TextPrimary"
                    android:layout_marginEnd="5dp"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tv_register_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:layout_gravity="end"
                    android:textColor="@color/TextPrimary"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp"/>
            </LinearLayout>




            <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSaveLocation"
            android:layout_width="fill_parent"
            android:layout_height="47dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginBottom="4dp"
            android:padding="12dp"
            android:text="@string/save_location"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnDeleteLocation"
                android:layout_width="fill_parent"
                android:layout_height="47dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginBottom="16dp"
                android:padding="12dp"
                android:text="@string/delete_location"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>



