<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.com.cmacica.flujocredito.ViewModel.AgendaComercial.RegistroReferidoActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>


    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context="pe.com.cmacica.flujocredito.ViewModel.AgendaComercial.RegistroReferidoActivity">


        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context="pe.com.cmacica.flujocredito.ViewModel.AgendaComercial.RegistroReferidoActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/espacio_norma_1">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayoutDNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textinputedittextDNI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registro_referido_dni_hint"
                    android:maxLength="8"></android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/buttonSearchPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textinputlayoutDNI"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/espacio_norma_2"
                android:text="@string/registro_referido_action_buscar"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background_two"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"></Button>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/buttonSearchPerson"
                android:layout_marginTop="@dimen/espacio_norma_1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textinputedittextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registro_referido_nombres_hint"
                    android:inputType="textPersonName"></android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textinputlayoutName">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textinputedittextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registro_referido_direccion_hint"
                    android:inputType="textPostalAddress"></android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinputlayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textinputlayoutAddress">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textinputedittextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registro_referido_telefono_hint"
                    android:inputType="phone"
                    android:maxLength="9"></android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/textDepartament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_referido_departamento_hint"
                app:layout_constraintTop_toBottomOf="@id/textinputlayoutPhone"
                android:layout_marginTop="@dimen/espacio_norma_1"></TextView>
            <Spinner
                android:id="@+id/spinnerDepartament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textDepartament"></Spinner>


            <TextView
                android:id="@+id/textProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_referido_provincia_hint"
                app:layout_constraintTop_toBottomOf="@id/spinnerDepartament"
                android:layout_marginTop="@dimen/espacio_norma_1"></TextView>
            <Spinner
                android:id="@+id/spinnerProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textProvince"></Spinner>

            <TextView
                android:id="@+id/textDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_referido_distrito_hint"
                app:layout_constraintTop_toBottomOf="@id/spinnerProvince"
                android:layout_marginTop="@dimen/espacio_norma_1"></TextView>
            <Spinner
                android:id="@+id/spinnerDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textDistrict"></Spinner>

            <TextView
                android:id="@+id/textAgency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_referido_agencia_hint"
                app:layout_constraintTop_toBottomOf="@id/spinnerDistrict"
                android:layout_marginTop="@dimen/espacio_norma_1"></TextView>
            <Spinner
                android:id="@+id/spinnerAgency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textAgency"></Spinner>

            <TextView
                android:id="@+id/textProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_referido_producto_hint"
                app:layout_constraintTop_toBottomOf="@id/spinnerAgency"
                android:layout_marginTop="@dimen/espacio_norma_1"></TextView>
            <Spinner
                android:id="@+id/spinnerProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textProduct"></Spinner>

            <CheckBox
                android:id="@+id/checkboxResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/spinnerProduct"
                android:layout_marginTop="@dimen/espacio_norma_1"
                android:text="@string/registro_referido_registrar_resultado_hint"></CheckBox>

            <Button
                android:id="@+id/buttonRegisterRefferedClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/checkboxResult"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/espacio_norma_1"
                android:layout_marginBottom="@dimen/espacio_norma_1"
                android:text="@string/registro_referido_action_registrar_cliente_referido"
                android:textColor="@android:color/white"
                android:background="@drawable/button_background_two"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"></Button>

        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>



